syntax = "proto3";
package video;
option go_package = "videoproto";

service VideoService {
    rpc CreateVideo(CreateVideoReq) returns(CreateVideoResp);                       // 上传视频
    rpc GetVideosByUserId(GetVideosByUserIdReq) returns(GetVideosByUserIdResp);     // 查询某人视频列表
    rpc GetVideosByTime(GetVideosByTimeReq) returns(GetVideosByTimeResp);           // 按时间戳查询视频
    rpc LikeVideo(LikeVideoReq) returns(LikeVideoResp);                             // 点赞视频
    rpc UnLikeVideo(UnLikeVideoReq) returns(UnLikeVideoResp);                       // 取消点赞视频
    rpc GetLikeVideos(GetLikeVideosReq) returns(GetLikeVideosResp);                 // 查询点赞视频列表
    rpc CreateComment(CreateCommentReq) returns(CreateCommentResp);                 // 评论
    rpc DeleteComment(DeleteCommentReq) returns(DeleteCommentResp);                 // 删除评论
    rpc GetComments(GetCommentsReq) returns(GetCommentsResp);                       // 查询视频的评论列表
}

message BaseResp {
    int64 status_code = 1;
    string status_msg = 2;
}

message VideoBaseInfo {
    int64 user_id = 1;
    string oss_video_id = 2;
    string title = 3;
}

message VideoInfo {
    int64 video_id = 1;
    VideoBaseInfo video_base_info = 2;
    int64 like_count = 3;
    int64 comment_count = 4;
    bool is_favorite = 5;
}

message CommentInfo {
    int64 comment_id = 1;
    int64 user_id = 2;
    string content = 3;
    string create_date = 4;
}

message CreateVideoReq {
    VideoBaseInfo video_base_info = 1;
}

message CreateVideoResp {
    BaseResp base_resp = 1;
}

message GetVideosByUserIdReq {
    int64 app_user_id = 1;
    int64 user_id = 2;
}

message GetVideosByUserIdResp {
    BaseResp base_resp = 1;
    repeated VideoInfo video_infos = 2;
}

message GetVideosByTimeReq {
    int64 app_user_id = 1;
    int64 latest_time = 2;
    int64 count = 3;
}

message GetVideosByTimeResp {
    BaseResp base_resp = 1;
    repeated VideoInfo video_infos = 2;
    int64 next_time = 3;
}

message LikeVideoReq {
    int64 user_id = 1;
    int64 video_id = 2;
}

message LikeVideoResp {
    BaseResp base_resp = 1;
}

message UnLikeVideoReq {
    int64 user_id = 1;
    int64 video_id = 2;
}

message UnLikeVideoResp {
    BaseResp base_resp = 1;
}

message GetLikeVideosReq {
    int64 app_user_id = 1;
    int64 user_id = 2;
}

message GetLikeVideosResp {
    BaseResp base_resp = 1;
    repeated VideoInfo video_infos = 2;
}

message CreateCommentReq {
    int64 user_id = 1;
    int64 video_id = 2;
    string content = 3;
}

message CreateCommentResp {
    BaseResp base_resp = 1;
    CommentInfo comment_info = 2;
}

message DeleteCommentReq {
    int64 comment_id = 1;
}

message DeleteCommentResp {
    BaseResp base_resp = 1;
}

message GetCommentsReq {
    int64 video_id = 1;
}

message GetCommentsResp {
    BaseResp base_resp = 1;
    repeated CommentInfo comment_infos = 2;
}
